--- a/tex/interfaces.tex
+++ b/tex/interfaces.tex
@@ -306,6 +306,8 @@ The library \textit{QCustomPlot} \cite{web_QCustomPlot} is used for plotting.
 \end{figure}
 
 
+\subsection{Typical workflow}
+TODO
 
 
 
@@ -325,6 +327,7 @@ template concepts \cite{TODO}.
 The \textit{SWIG} interface definition, which maps the \textit{C++} classes to corresponding \textit{Python} 
 classes of the same name, can be found in the file \lstinline|./scripting/taspaths.i| of the source repository.
 
+\paragraph{Typical workflow}
 An example of the full workflow consisting of loading an instrument definition file, creating a path 
 mesh and finding the path from a start position in crystal coordinates to a target position is given in listings 
 \ref{lst:pyworkflow1}, \ref{lst:pyworkflow2} and \ref{lst:pyworkflow3}.
